# tese

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json.example  AGENTS.md  CLAUDE.md  README.md  holdings.example.yaml  pyproject.toml  watchlist.example.yaml
.agent0/: HANDOFF.md  harness-sync-baseline.json  memory.config.json
.agent0/hooks/: _brief-compose.sh  _memory-hook-lib.sh  context-inject.sh  delegation-gate.sh  delegation-start-audit.sh  delegation-stop.sh  delegation-verify.sh  governance-gate.sh  memory-decay-readout.sh  memory-events-journal.sh  memory-frontmatter-validate.sh  memory-index-gate.sh  reminders-readout.sh  routines-readout.sh  secrets-preflight.sh  session-start.sh  session-stop.sh  session-track-edits.sh  startup-brief.sh
.agent0/memory/: MEMORY.md  ledger-design-invariants.md  owner-investment-context.md  product-artifacts-handbuilt.md
.agent0/tests/: agents-memory-block-budget.sh
.agent0/tools/: check-instruction-drift.sh  codex-local-env.sh  context-retrieve-helper.py  context-retrieve.sh  doctor.sh  fal-rest.sh  install-routines.sh  memory-backfill-metadata.sh  memory-backfill.sh  (+9 more)
.claude/: settings.json
.codex/: config.toml.example  hooks.json
.githooks/: pre-commit
app/: __init__.py  cli.py  main.py
docs/: brand-book.md  compliance-tax.md  concept-brief.md  roadmap.md  system-design.md
tests/: conftest.py  test_append_only_correction.py  test_dashboard_api.py  test_export_golden_ledger.py  test_ledger_api.py  test_opening_import.py  test_quote_refresh.py  test_request_connection_isolation.py  test_yfinance_adapter.py
(+873 files in other folders)
