[project]
name = "tese"
version = "0.1.0"
description = "Local-first personal investment decision-support dashboard and Brazil-aware compliance ledger."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "pyyaml>=6.0",
  "uvicorn[standard]>=0.30",
  "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".agent0", ".claude", ".codex", ".venv", "assets"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
